# VLDP-Drone

./: .clang-format  CHANGELOG.md  README.md
docs/: architecture.md
docs/sprint/: sprint1.md
workspace/src/vldp/vldp_common/: CMakeLists.txt  README.md  package.xml
workspace/src/vldp/vldp_common/include/vldp_common/: config.h  exception.h  file_utils.h  logger.h  macros.h  singleton.h  status.h  time.h  timer.h  types.h
workspace/src/vldp/vldp_common/src/: config.cpp  file_utils.cpp  logger.cpp  time.cpp  timer.cpp
workspace/src/vldp/vldp_common/test/: test_common.cpp
workspace/src/vldp/vldp_controller/: CMakeLists.txt  README.md  package.xml
workspace/src/vldp/vldp_controller/include/vldp_controller/: controller.h  controller_node.h
workspace/src/vldp/vldp_controller/src/: controller.cpp  controller_node.cpp  main.cpp
workspace/src/vldp/vldp_core/: CMakeLists.txt  package.xml
workspace/src/vldp/vldp_core/include/vldp_core/: control_command.h  observation.h  pose.h  velocity.h
workspace/src/vldp/vldp_core/src/: demo_core.cpp
workspace/src/vldp/vldp_localization/: CMakeLists.txt  README.md  package.xml
workspace/src/vldp/vldp_localization/config/: localization.yaml
workspace/src/vldp/vldp_localization/include/vldp_localization/: localication.h  localication_node.h  localization.h  localization_converter.h  localization_node.h
workspace/src/vldp/vldp_localization/launch/: vldp_localization.launch
workspace/src/vldp/vldp_localization/src/: localization.cpp  localization_converter.cpp  localization_node.cpp  main.cpp
workspace/src/vldp/vldp_mission/: CMakeLists.txt  README.md  package.xml
workspace/src/vldp/vldp_mission/include/vldp_mission/: mission.h  mission_manager.h  mission_node.h  mission_types.h
workspace/src/vldp/vldp_mission/src/: main.cpp  mission.cpp  mission_node.cpp
workspace/src/vldp/vldp_msgs/: CMakeLists.txt  README.md  package.xml
workspace/src/vldp/vldp_msgs/msg/: ControlCommand.msg
workspace/src/vldp/vldp_platform/: CMakeLists.txt  README.md  package.xml
workspace/src/vldp/vldp_platform/config/: platform.yaml
workspace/src/vldp/vldp_platform/include/vldp_platform/: platform_node.h
workspace/src/vldp/vldp_platform/launch/: platform.launch
workspace/src/vldp/vldp_platform/src/: main.cpp  platform_node.cpp
workspace/src/vldp/vldp_px4_bridge/: CMakeLists.txt  package.xml
workspace/src/vldp/vldp_px4_bridge/include/vldp_px4_bridge/: px4_bridge.h  px4_bridge_node.h
workspace/src/vldp/vldp_px4_bridge/src/: main.cpp  px4_bridge.cpp  px4_bridge_node.cpp
