<?xml version="1.0"?>
<package format="2">
  <name>vldp_localization</name>
  <version>0.1.0</version>

  <description>
    Unified localization module for Vision-Language Differentiable Physics Drone (VLDP).
  </description>

  <maintainer email="your_email@example.com">jiezz12</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <!-- Message -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- TF -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- VLDP -->
  <depend>vldp_core</depend>

  <depend>gazebo_msgs</depend>
  <export>
  </export>

</package>

